@@ -829,6 +829,8 @@
  
      if ( my_task == ioroot ) then
        allocate (TAVG_MOC_G(n_lat_aux_grid+1,km+1,n_moc_comp,n_transport_reg))
+     else
+       allocate (TAVG_MOC_G(1, 1, 1, 1))
      endif
 
    endif
@@ -875,11 +877,15 @@
    if ( n_heat_trans_requested .and. my_task == ioroot ) then
     allocate (  &
      TAVG_N_HEAT_TRANS_G(n_lat_aux_grid+1, n_transport_comp,n_transport_reg))
+   else
+      allocate (TAVG_N_HEAT_TRANS_G(1, 1, 1))
    endif
 
    if ( n_salt_trans_requested .and. my_task == ioroot ) then
     allocate (  &
      TAVG_N_SALT_TRANS_G(n_lat_aux_grid+1,n_transport_comp,n_transport_reg))
+   else
+      allocate (TAVG_N_SALT_TRANS_G(1, 1, 1))
    endif
 
    if ((n_heat_trans_requested .or. n_salt_trans_requested) ) then
@@ -887,6 +893,8 @@
      if (my_task == ioroot ) then
        allocate (  &
          TR_TRANS_G (n_lat_aux_grid+1,n_transport_comp,n_transport_reg))
+     else
+       allocate (TR_TRANS_G(1, 1, 1))
      endif
      call document ('init_moc_ts_transport_arrays','allocate TR_TRANS_G')
    endif
